--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ margin-right: auto;
 
   font-size: 50px;
 padding: 20px;
+
   font-family: sans-serif;
 
 }
@@ -134,9 +135,10 @@ padding: 20px;
 .past-grid-spot{
   padding: 20px;
   border-radius: 15px;
-
+  aspect-ratio: 1/1;
   background-color: white;
   margin:10px
+
 }
 
 .arrow{
@@ -151,7 +153,7 @@ body{
 }
 
 .past-super{
-display: none;
+/* display: none; */
 }
 
 .amount-button{
