--- a/styles.css
+++ b/styles.css
@@ -67,10 +67,10 @@ height: 30px;
 }
 
 #amount{
-  font-size: 50px;
+  /* font-size: 50px;
   font-family: sans-serif;
   padding-top: 50%;
-  color: white;
+  color: white; */
 
 }
 
